# saixiaoxi

./: .gitignore  LICENSE  README.md
backend/: .env.example  app.py  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: middleware.py  routes.py
backend/src/config/: settings.py
backend/src/core/auth/: login.py
backend/src/core/crypto/: algorithms.py
backend/src/data/: __init__.py  commands.json
backend/src/network/packet/: receive.py  send.py
backend/src/utils/: UserInfo.as  __init__.py  exceptions.py  logger.py  parse_userinfo.py
frontend/: .env.development  .env.production.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: AccountResultDialog.vue  HighlightTiles.vue  InfoCard.vue  InfoRow.vue  QueryForm.vue  Section.vue  UserDetails.vue  UserProfile.vue
frontend/src/components/ui/: Alert.vue  Button.vue  Card.vue  CardContent.vue  CardHeader.vue  CardTitle.vue  Dialog.vue  DialogContent.vue  DialogHeader.vue  DialogTitle.vue  Input.vue
frontend/src/composables/: useAccountQuery.ts  useExportSnapshot.ts  useFlyingAnimation.ts  useStatusBanner.ts  useTypewriter.ts
frontend/src/constants/: highlightTiles.ts
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
